--- a/Blik Mac/GLAAddNewCollectionViewController.xib
+++ b/Blik Mac/GLAAddNewCollectionViewController.xib
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAAddNewCollectionViewController">
             <connections>
+                <outlet property="colorChoiceView" destination="SJ2-69-dck" id="o4Y-DL-PpY"/>
+                <outlet property="colorLabel" destination="y1p-bF-gca" id="qan-wJ-J5m"/>
                 <outlet property="confirmCreateButton" destination="7Fn-gf-0Un" id="wsv-yA-1ow"/>
                 <outlet property="nameLabel" destination="U6r-xK-0vx" id="GAC-7R-ceT"/>
                 <outlet property="nameTextField" destination="765-VU-j1R" id="jfW-s3-dbE"/>
@@ -19,9 +21,10 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField wantsLayer="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" placeholderIntrinsicWidth="312" placeholderIntrinsicHeight="29" translatesAutoresizingMaskIntoConstraints="NO" id="765-VU-j1R" customClass="GLATextField">
-                    <rect key="frame" x="18" y="126" width="464" height="32"/>
+                    <rect key="frame" x="108" y="170" width="284" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="Z6U-Ki-vaq"/>
+                        <constraint firstAttribute="width" constant="280" id="liI-ek-Zws"/>
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" alignment="center" title="Collection name text field" placeholderString="" id="DmT-fu-j1w">
                         <font key="font" size="16" name="AvenirNext-DemiBold"/>
@@ -30,7 +33,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="U6r-xK-0vx">
-                    <rect key="frame" x="166" y="166" width="169" height="23"/>
+                    <rect key="frame" x="166" y="210" width="169" height="23"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="TwS-tt-s4N"/>
                     </constraints>
@@ -59,16 +62,38 @@
                         <action selector="confirmCreate:" target="-2" id="dpT-KZ-f2o"/>
                     </connections>
                 </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="y1p-bF-gca">
+                    <rect key="frame" x="213" y="131" width="76" height="23"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="f0K-s8-zD7"/>
+                    </constraints>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Pick a color:" id="FKi-Bu-bLb">
+                        <font key="font" size="13" name="AvenirNext-Medium"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="SJ2-69-dck" customClass="GLAColorChoiceView">
+                    <rect key="frame" x="232" y="87" width="36" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="4B2-yH-VMH"/>
+                        <constraint firstAttribute="width" constant="36" id="ZXe-rI-0ze"/>
+                    </constraints>
+                </customView>
             </subviews>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="765-VU-j1R" secondAttribute="centerX" id="1Hz-Tz-1MO"/>
                 <constraint firstItem="765-VU-j1R" firstAttribute="top" secondItem="U6r-xK-0vx" secondAttribute="bottom" constant="8" id="3pM-Mz-G2j"/>
                 <constraint firstAttribute="centerX" secondItem="U6r-xK-0vx" secondAttribute="centerX" id="6tW-aN-jt9"/>
-                <constraint firstItem="765-VU-j1R" firstAttribute="leading" secondItem="vCb-Py-Wb1" secondAttribute="leading" constant="20" id="7ug-1e-cxY"/>
-                <constraint firstAttribute="trailing" secondItem="765-VU-j1R" secondAttribute="trailing" constant="20" id="OBQ-gL-GEY"/>
+                <constraint firstItem="765-VU-j1R" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vCb-Py-Wb1" secondAttribute="leading" constant="20" id="7ug-1e-cxY"/>
+                <constraint firstItem="SJ2-69-dck" firstAttribute="top" secondItem="y1p-bF-gca" secondAttribute="bottom" constant="8" id="Bc3-hR-5aY"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="765-VU-j1R" secondAttribute="trailing" constant="20" id="OBQ-gL-GEY"/>
+                <constraint firstItem="y1p-bF-gca" firstAttribute="centerX" secondItem="SJ2-69-dck" secondAttribute="centerX" constant="0.5" id="RkY-GB-bLA"/>
                 <constraint firstAttribute="bottom" secondItem="7Fn-gf-0Un" secondAttribute="bottom" constant="32" id="bUw-RZ-k0C"/>
-                <constraint firstAttribute="centerY" secondItem="765-VU-j1R" secondAttribute="centerY" constant="6" id="ixi-we-Lfj"/>
+                <constraint firstAttribute="centerY" secondItem="765-VU-j1R" secondAttribute="centerY" constant="50" id="ixi-we-Lfj"/>
                 <constraint firstAttribute="centerX" secondItem="7Fn-gf-0Un" secondAttribute="centerX" id="jIN-yX-hcC"/>
+                <constraint firstAttribute="centerX" secondItem="SJ2-69-dck" secondAttribute="centerX" id="lQv-U9-faO"/>
+                <constraint firstItem="y1p-bF-gca" firstAttribute="top" secondItem="765-VU-j1R" secondAttribute="bottom" constant="16" id="y07-RG-0LB"/>
             </constraints>
             <point key="canvasLocation" x="221" y="269"/>
         </customView>
