--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
     </dependencies>
@@ -42,6 +42,9 @@
                         <color key="textColor" red="0.98812824489999995" green="0.98829692599999996" blue="0.98811751599999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <connections>
+                        <action selector="changeName:" target="-2" id="qRd-dl-OfK"/>
+                    </connections>
                 </textField>
                 <scrollView verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-xA-IHE">
                     <rect key="frame" x="20" y="38" width="160" height="177"/>
@@ -279,7 +282,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="ZUS-dC-Lli"/>
                     </constraints>
-                    <buttonCell key="cell" type="square" title="Edit Plan" bezelStyle="shadowlessSquare" alignment="right" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Bjc-C1-2DG" customClass="GLAButtonCell">
+                    <buttonCell key="cell" type="square" title="Edit Highlights" bezelStyle="shadowlessSquare" alignment="right" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Bjc-C1-2DG" customClass="GLAButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                     </buttonCell>
@@ -399,7 +402,7 @@
             <subviews>
                 <button placeholderIntrinsicWidth="140" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="c85-1L-Qdb" customClass="GLAButton">
                     <rect key="frame" x="0.0" y="0.0" width="500" height="30"/>
-                    <buttonCell key="cell" type="square" title="Finish Editing Plan" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="UHM-eY-8iR" customClass="GLAButtonCell">
+                    <buttonCell key="cell" type="square" title="Finish Editing Highlights" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="UHM-eY-8iR" customClass="GLAButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                     </buttonCell>
@@ -447,7 +450,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="cw3-6l-doZ"/>
                     </constraints>
-                    <buttonCell key="cell" type="square" title="New Planned Item" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IfQ-og-t9s" customClass="GLAButtonCell">
+                    <buttonCell key="cell" type="square" title="New Reminder" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IfQ-og-t9s" customClass="GLAButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" size="13" name="AvenirNext-Medium"/>
                     </buttonCell>
@@ -503,7 +506,7 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hasPrimaryStyle" value="YES"/>
                     </userDefinedRuntimeAttributes>
                     <connections>
-                        <action selector="makeNewCollection:" target="raF-W4-b8E" id="MSr-nV-UdM"/>
+                        <action selector="addNewCollection:" target="-2" id="8X1-qo-V1x"/>
                     </connections>
                 </button>
             </subviews>
